# waylay-sdk-registry-py

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt
.github/workflows/: python.yml
.openapi-generator/: FILES
docs/: AboutApi.md  ActiveEventData.md  ActiveEventSSE.md  ActiveEventSSEEvent.md  AltEmbeddedVersionIKfservingResponseV2.md  AltEmbeddedVersionIPlugResponseV2.md  AltEmbeddedVersionIWebscriptResponseWithInvokeLinkV2.md  AltVersionHALLink.md  AltVersionHALLinkDraft.md  AltVersionHALLinkPublished.md  AnyFunctionResponse.md  AnyJobForFunction.md  AnyJobResult.md  AnyJobStatus.md  AnyJobStatusSummary.md  ArchiveFormat.md  ArchiveFormatExclude.md  ArchiveFormatFilter.md  AssetCondition.md  AssetConditionContentType.md  AssetConditionPattern.md  AssetPathParamsV2.md  AssetRole.md  AssetSummary.md  AssetSummaryWithHALLink.md  AssetSummaryWithHALLinkLinks.md  AssetsConditions.md  AsyncDeployQuery.md  AsyncDeployQueryV1.md  AsyncQueryDefaultFalse.md  AsyncQueryDefaultTrue.md  AsyncVerifyQuery.md  Batch.md  BatchArgs.md  BatchJobStatus.md  BatchJobStatusType.md  BatchResult.md  Build.md  Build1.md  BuildArgs.md  (+437 more)
openapi/: registry.openapi.yaml  registry.transformed.openapi.yaml
test/: __init__.py  conftest.py  fixtures.py  openapi.py
test/_run/: registry.openapi.yaml  registry.transformed.openapi.yaml
test/_run/openapi/: registry.openapi.yaml  registry.openapi.yaml.json  registry.transformed.openapi.yaml  registry.transformed.openapi.yaml.json
test/api/: __init__.py  about_api_test.py  default_api_test.py  jobs_api_test.py  model_functions_api_test.py  model_tags_api_test.py  models_api_test.py  plug_functions_api_test.py  plug_tags_api_test.py  plugs_api_test.py  runtimes_api_test.py  schemas_api_test.py  tags_api_test.py  webscript_functions_api_test.py  webscript_tags_api_test.py  webscripts_api_test.py
test/types/: __init__.py  active_event_data_stub.py  active_event_sse_event_stub.py  active_event_sse_stub.py  alt_embedded_version_i_kfserving_response_v2_stub.py  alt_embedded_version_i_plug_response_v2_stub.py  alt_embedded_version_i_webscript_response_with_invoke_link_v2_stub.py  alt_version_hal_link_draft_stub.py  alt_version_hal_link_published_stub.py  alt_version_hal_link_stub.py  any_function_response_stub.py  any_job_for_function_stub.py  any_job_result_stub.py  any_job_status_stub.py  any_job_status_summary_stub.py  archive_format_exclude_stub.py  archive_format_filter_stub.py  archive_format_stub.py  asset_condition_content_type_stub.py  asset_condition_pattern_stub.py  asset_condition_stub.py  asset_path_params_v2_stub.py  asset_role_stub.py  asset_summary_stub.py  asset_summary_with_hal_link_links_stub.py  asset_summary_with_hal_link_stub.py  assets_conditions_stub.py  async_deploy_query_stub.py  async_deploy_query_v1_stub.py  async_query_default_false_stub.py  async_query_default_true_stub.py  async_verify_query_stub.py  batch_args_stub.py  batch_job_status_stub.py  batch_job_status_type_stub.py  batch_result_stub.py  batch_stub.py  build1_stub.py  build_args_stub.py  build_job_for_function_stub.py  (+423 more)
waylay-sdk-registry/: README.md  pyproject.toml
waylay-sdk-registry-types/: README.md  pyproject.toml
waylay-sdk-registry-types/.openapi-generator/: FILES
waylay-sdk-registry-types/src/waylay/services/registry/models/: __init__.py  active_event_data.py  active_event_sse.py  active_event_sse_event.py  alt_embedded_version_i_kfserving_response_v2.py  alt_embedded_version_i_plug_response_v2.py  alt_embedded_version_i_webscript_response_with_invoke_link_v2.py  alt_version_hal_link.py  alt_version_hal_link_draft.py  alt_version_hal_link_published.py  any_function_response.py  any_job_for_function.py  any_job_result.py  any_job_status.py  any_job_status_summary.py  archive_format.py  archive_format_exclude.py  archive_format_filter.py  asset_condition.py  asset_condition_content_type.py  asset_condition_pattern.py  asset_path_params_v2.py  asset_role.py  asset_summary.py  asset_summary_with_hal_link.py  asset_summary_with_hal_link_links.py  assets_conditions.py  async_deploy_query.py  async_deploy_query_v1.py  async_query_default_false.py  async_query_default_true.py  async_verify_query.py  batch.py  batch_args.py  batch_job_status.py  build.py  (+422 more)
waylay-sdk-registry/.openapi-generator/: FILES
waylay_registry_api/: pyproject.toml
waylay_registry_api/src/waylay/services/registry/api/: __init__.py  default_api.py  jobs_api.py  model_functions_api.py  models_api.py  plug_functions_api.py  plugs_api.py  runtimes_api.py  schemas_api.py  webscript_functions_api.py  webscripts_api.py
waylay_registry_api/src/waylay/services/registry/service/: __init__.py  service.py
waylay_registry_types/: pyproject.toml
waylay_registry_types/.openapi-generator/: FILES
waylay_registry_types/src/waylay/services/registry/models/: __init__.py  active_event_data.py  active_event_sse.py  alt_embedded_version_i_kfserving_response_v2.py  alt_embedded_version_i_plug_response_v2.py  alt_embedded_version_i_webscript_response_with_invoke_link_v2.py  alt_version_hal_link.py  any_function_response.py  any_job_for_function.py  any_job_result.py  any_job_status.py  any_job_status_summary.py  archive_format.py  asset_condition.py  asset_condition_content_type.py  asset_condition_pattern.py  asset_path_params_v2.py  asset_role.py  asset_summary.py  asset_summary_with_hal_link.py  asset_summary_with_hal_link_links.py  assets_conditions.py  async_deploy_query.py  async_deploy_query_v1.py  async_query_default_false.py  async_query_default_true.py  async_verify_query.py  batch.py  batch_args.py  batch_job_status.py  batch_result.py  build.py  build1.py  build_args.py  build_job_for_function.py  build_job_status.py  build_result.py  build_spec.py  cleanup_result.py  compiled_runtime_version.py  (+361 more)
waylay_registry_types/src/waylay/services/registry/queries/: __init__.py  default_api.py  jobs_api.py  model_functions_api.py  models_api.py  plug_functions_api.py  plugs_api.py  runtimes_api.py  schemas_api.py  webscript_functions_api.py  webscripts_api.py
(+33 files in other folders)
