[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "waylay_registry"
version = "2.12.2-0"
description = "Waylay Function Registry"
authors = [
    { name = "Waylay", email = "dev@waylay.io"}
]
keywords = ["Waylay Function Registry"]
requires-python = ">= 3.7"
dependencies = [
    "waylay-sdk ~= 0.0.3",
    "pydantic ~= 2.6",
    "typing-extensions ~= 4.9",
]


[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "types-python-jose",
    "types-appdirs",
    "types-python-dateutil",
    "pytest",
    "pytest-mock",
    "pytest-httpx",
    "pytest-asyncio",
]

types = ["waylay_registry_types"]


[tool.setuptools.packages.find]
where = ["waylay_registry_api/src/", "waylay_registry_types/src/"]
namespaces = true

[tool.ruff]
include = ["pyproject.toml", "test/**/*.py"]

[tool.ruff.lint]
ignore-init-module-imports = true
# allow duplicate imports
ignore=["F811"]

[tool.ruff.lint.per-file-ignores]
# do not touch imports here
"__init__.py" = ["F401"]
"conftest.py" = ["F401"]