[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "waylay_registry_api"
version = "2.12.3-0"
description = "Waylay Function Registry"
authors = [
    { name = "Waylay", email = "dev@waylay.io"}
]
keywords = ["Waylay Function Registry"]
requires-python = ">= 3.7"
dependencies = [
    "waylay-sdk ~= 0.0.3",
    "pydantic ~= 2.6",
    "typing-extensions ~= 4.9",
]


[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "types-python-jose",
    "types-appdirs",
    "types-python-dateutil",
    "pytest",
    "pytest-mock",
    "pytest-httpx",
    "pytest-asyncio",
    "starlette",
    "python-multipart",
    "typeguard",
    "pyyaml",

    #### following deps need to be specified manually until https://github.com/ghandic/jsf/pull/104 is included
    "jsf@git+https://github.com/simon-schoonjans/jsf@waylay_main",
    "faker>=15.3.4",
    "jsonschema>=4.17.3",
    "rstr>=3.2.0",
    "smart-open[http]>=6.3.0",
    ####
]

types = ["waylay_registry_types"]

[project.entry-points.dynamic]
"waylay_sdk_plugins"= "waylay.services.registry.service:PLUGINS"

[tool.setuptools.packages.find]
where = ["src/"]
namespaces = true

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
ignore-init-module-imports = true
# allow duplicate imports
ignore=["F811"]

[tool.ruff.lint.per-file-ignores]
# do not touch imports here
"__init__.py" = ["F401"]
"conftest.py" = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"