[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "waylay_registry_types"
version = "2.12.1-0"
description = "Waylay Function Registry Types "
authors = [
    { name = "Waylay", email = "dev@waylay.io"}    
]
keywords = ["Waylay Function Registry" , "Types"]
requires-python = ">= 3.7"
dependencies = [
    
    "pydantic ~= 2.6",
    "typing-extensions ~= 4.9",
]


[project.optional-dependencies]
dev = [
    "pylint",
    "pycodestyle",
    "pydocstyle",
    "mypy",
    "autopep8",
    "docformatter",
    "types-python-jose",
    "types-appdirs",
    "types-python-dateutil",
    "pytest",
    "pytest-mock",
    "pytest-httpx",
    "pytest-asyncio",
]


[tool.setuptools.packages.find]
where = ["src/"]
namespaces = true
